# UnityCodeMCPServer

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  README.md  README_STDIO.md  UnityCodeMcpServer.slnx  stdio.md
.github/prompts/: implementTask.prompt.md
.loop/: favouriteScripts.json
.unityCodeMcpServer/: favouriteScripts.json
Assets/: UniversalRenderPipelineGlobalSettings.asset
Assets/Plugins/Loop4UnityMcpServer/Editor/STDIO~/: pyproject.toml
Assets/Plugins/Loop4UnityMcpServer/Editor/STDIO~/src/loop_mcp_stdio/: loop_mcp_bridge_stdio.py
Assets/Plugins/Loop4UnityMcpServer/Editor/STDIO~/tests/: test_bridge.py
Assets/Resources/: UnityCodeMcpServerSettings.asset  cities.csv
Assets/Scenes/: SampleScene.unity
Assets/ScriptableObjects/: Alderbridge.asset  Amberfield.asset  Briarfall.asset  Brindle Hollow.asset  Caelum Port.asset  Cinder Hollow.asset  Driftfen.asset  Dunwater.asset  Ebbshore.asset  Everspring.asset  Fallowmere.asset  Frostwell.asset  Granthold.asset  Gullreach.asset  Hearthwick.asset  Hollowridge.asset  Irisfen.asset  Ironvale.asset  Jadeford.asset  Juniper Crossing.asset  Kelpport.asset  Kestrel Bay.asset  Larkspur Heights.asset  Lumenvale.asset  Moonreach.asset  Mosswick.asset  Northfen.asset  Northwick.asset  Orchard Hollow.asset  Oxbury.asset  Palehaven.asset  Peregrine's Rest.asset  Quarryrift.asset  Quillmere.asset  Ravenmoor.asset  Rookstead.asset  Seabright.asset  Sunmarsh.asset  Thalassa Point.asset  Thornwick.asset  (+9 more)
Assets/Scripts/: CityComponent.cs
Assets/Tests/: AssemblyLoadingIntegrationTests.cs  ExecuteCSharpScriptInUnityEditorTests.cs  McpMessagesResourceContentTests.cs  McpRegistryTests.cs  RunUnityTestsToolTests.cs  ScriptExecutionToolTests.cs  (+3 more)
Dev/Python/: README.md  mcp_random_tester.py  pyproject.toml  reproduce_dll_lock.py
ProjectSettings/: ProjectSettings.asset
(+183 files in other folders)
