[project]
name = "dll-lock-repro"
version = "0.1.0"
description = "Scripts to diagnose and reproduce Unity DLL lock issues with MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
    "pygetwindow>=0.0.9",
]

[project.scripts]
reproduce_dll_lock = "reproduce_dll_lock:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
